<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <!-- Mr Potato -->

    <RelativeLayout
        android:layout_width="344dp"
        android:layout_height="185dp"
        android:layout_weight="0.36"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/Body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/Hat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/Ears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/ears"/>

        <ImageView
            android:id="@+id/Eyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyes"/>

        <ImageView
            android:id="@+id/Arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/arms"/>

        <ImageView
            android:id="@+id/Eyebrows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/eyebrows"/>

        <ImageView
            android:id="@+id/Glasses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/glasses"/>

        <ImageView
            android:id="@+id/Mouth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/mouth"/>

        <ImageView
            android:id="@+id/Mustache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/mustache"/>

        <ImageView
            android:id="@+id/Nose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/nose"/>

        <ImageView
            android:id="@+id/Shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Body"
            android:layout_alignParentStart="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/shoes" />

    </RelativeLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:text="@string/select"
        android:textAlignment="center"/>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Hat -->
            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/Hat"
                android:onClick="HatChecked"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nose"
                android:onClick="NoseChecked"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Brows"
                android:onClick="BrowsChecked"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mustache"
                android:onClick="MustacheChecked"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Eyes"
                android:onClick="EyesChecked"/>

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mouth"
                android:onClick="MouthChecked"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Glasses"
                android:onClick="GlassesChecked"/>

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Arms"
                android:onClick="ArmsChecked"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ears"
                android:onClick="EarsChecked"/>

            <CheckBox
                android:id="@+id/checkBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shoes"
                android:onClick="ShoesChecked"/>

        </TableRow>

    </TableLayout>


</LinearLayout>

